--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "sort-by": "^1.2.0",
-    "sweetalert-react": "^0.4.11",
+    "sweetalert2": "^11.26.18",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
