--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^11.1.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lenis": "^1.3.17",
     "localforage": "^1.10.0",
+    "lottie": "^0.0.1",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
